--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,3 +62,22 @@ jobs:
             sudo docker stop express_react_be || true
             sudo docker rm express_react_be || true
             sudo docker run -d --name express_react_be -p 3500:3500 puneetnj/express_react_be:latest
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Pull and Extract Frontend Assets
+        run: |
+          docker pull puneetnj/express_react_fe:latest
+          docker create --name temp_container puneetnj/express_react_fe:latest
+          docker cp temp_container:/usr/share/nginx/html/. ./dist
+          docker rm temp_container
+
+      - name: Deploy to S3
+        run: |
+          aws s3 sync dist s3://${{ secrets.S3_BUCKET }} --delete
+          aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
